responsive flexbox navbar with flexdirection with media query.  as well as wrapped fixed size numbered bod row

--- a/lesson_1/styles.css
+++ b/lesson_1/styles.css
@@ -1,136 +1,54 @@
 * {
-  font-family: "Avenir", sans-serif;
   box-sizing: border-box;
 }
 
-body {
-  width: 80%;
-  margin: 0 auto;
-  padding: 15px;
-}
-
-.left {
-  float: left;
-}
-
-.right {
-  float: right;
-}
-
-.nav a {
-  top: 100px;
-  width: 40%;
-  padding: 20px 0;
-  background-color: #7fbbfa;
-  text-align: center;
-  margin: 2%;
+.flex-container {
+  padding: 25px;
   display: flex;
+  background-color: #F67280;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.cube {
+  display: flex;
+  margin: 5px;
+  height: 104px;
+  flex-basis: 104px;
+  background-color: #F8B195;
   align-items: center;
   justify-content: center;
 }
 
-.nav:after {
-  content: "";
-  clear: both;
-  display: block;
+.cube p {
+  font-size: 4rem;
+  color: white;
 }
 
 .nav {
-  justify-content: center;
-  display: flex;
-}
-
-@media (min-width: 900px) {
-  .features {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .nav {
-    margin: 15px;
-  }
-
-  .nav a {
-    padding: 20px 40px;
-  }
-}
-
-.gallery {
-  margin: 15px;
-  display: flex;
   padding: 20px;
-  flex-wrap: wrap;
+  display: flex;
   justify-content: center;
-  align-content: center;
-}
-
-.piece {
-  margin: 15px;
-  padding: 0;
-  width: 150px;
-  height: 100px;
-  background-color: maroon;
-  color: white;
-  font-size: 25px;
-  text-align: center;
-}
-
-.piece p {
-  margin: 0;
-  line-height: 100px;
-}
-
-.feature {
-  flex-basis: 30%;
-  padding: 0 15px;
-}
-
-.red {
-  background-color: #c0dbe2;
-}
-
-.blue {
-  background-color: #cdf1c3;
-}
-
-.green {
-  background-color: #ccb9da;
-}
-
-.banner {
-  margin: 30px;
-  height: 220px;
-  display: flex;
-  width: 50%;
-  margin: 0 auto;
-  background-color: grey;
-}
-
-.center-me {
-  margin: auto;
-}
-
-.container {
-  margin: 30px;
-  display: flex;
-}
-
-.side-col {
-  flex-direction: column;
-  display: flex;
-  flex: 1;
-}
-
-.body {
-  flex: 1;
-}
-
-.side-col-1 {
   background-color: blue;
-  flex: 1;
 }
 
-.side-col-2 {
-  background-color: red;
-  flex: 1;
+.nav a {
+  padding: 20px;
+  background-color: royalblue;
+  margin: 15px;
+}
+
+@media (min-width: 500px) {
+  .nav a {
+    color: gold;
+  }
+  .nav {
+    justify-content: flex-end;
+  }
+}
+
+@media (max-width: 539px) {
+  .nav {
+    flex-direction: column;
+  }
 }
